--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Citation 12</a><hr><hr>
 </div>
 
 
-<a class="button9" onclick="location.href='../index.html';" onmousedown="btnSound.play();">возвратиться на Стартовую</a>
+<a class="button9" onclick="location.href='story01.html';" onmousedown="btnSound.play();">перейти к Истории</a>
 </div>
 
 </body>
