--- a/citationPhrases/citation04/phrases04.html
+++ b/citationPhrases/citation04/phrases04.html
@@ -13,50 +13,50 @@
 <div id="container">
 <div id="grid_container">
 
-<div onmousedown="javascript:playSound('phrase01');">and how much more I knew</div>
-<audio id="phrase01" source src="audio/and how much more I knew.mp3" type="audio/mpeg" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase01');">and how much more I knew
+<audio id="phrase01" source src="audio/and how much more I knew.mp3" type="audio/mpeg" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase02');">come to their support</div>
-<audio id="phrase02" source src="audio/come to their support.mp3" type="audio/mpeg" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase02');">come to their support
+<audio id="phrase02" source src="audio/come to their support.mp3" type="audio/mpeg" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase03');">and that no rewards</div>
-<audio id="phrase03" source src="audio/and that no rewards.mp3" type="audio/mpeg" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase03');">and that no rewards
+<audio id="phrase03" source src="audio/and that no rewards.mp3" type="audio/mpeg" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase04');">had been given them for</div>
-<audio id="phrase04" source src="audio/had been given them for.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase04');">had been given them for
+<audio id="phrase04" source src="audio/had been given them for.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase05');">had yet come to their support</div>
-<audio id="phrase05" src="audio/had yet come to their support.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase05');">had yet come to their support
+<audio id="phrase05" src="audio/had yet come to their support.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase06');">I had learnt of their secret</div>
-<audio id="phrase06" src="audio/I had learnt of their secret.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase06');">I had learnt of their secret
+<audio id="phrase06" src="audio/I had learnt of their secret.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase07');">no guns or troops had yet come</div>
-<audio id="phrase07" source src="audio/no guns or troops had yet come.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase07');">no guns or troops had yet come
+<audio id="phrase07" source src="audio/no guns or troops had yet come.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase08');">of their secret dealings</div>
-<audio id="phrase08" src="audio/of their secret dealings.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase08');">of their secret dealings
+<audio id="phrase08" src="audio/of their secret dealings.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase09');">on a slippery ledge</div>
-<audio id="phrase09" source src="audio/on a slippery ledge.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase09');">on a slippery ledge
+<audio id="phrase09" source src="audio/on a slippery ledge.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase10');">that no guns or troops</div>
-<audio id="phrase10" source src="audio/that no guns or troops.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase10');">that no guns or troops
+<audio id="phrase10" source src="audio/that no guns or troops.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase11');">they were anxious to know</div>
-<audio id="phrase11" source src="audio/they were anxious to know.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase11');">they were anxious to know
+<audio id="phrase11" source src="audio/they were anxious to know.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase12');">troops had yet come to</div>
-<audio id="phrase12" source src="audio/troops had yet come to.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase12');">troops had yet come to
+<audio id="phrase12" source src="audio/troops had yet come to.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase13');">we were on a slippery ledge</div>
-<audio id="phrase13" source src="audio/we were on a slippery ledge.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase13');">we were on a slippery ledge
+<audio id="phrase13" source src="audio/we were on a slippery ledge.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase13');">we were on a slippery ledge</div>
-<audio id="phrase13" source src="audio/we were on a slippery ledge.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase13');">we were on a slippery ledge
+<audio id="phrase13" source src="audio/we were on a slippery ledge.mp3" preload="auto"></audio></a></div>
 
-<div onmousedown="javascript:playSound('phrase13');">we were on a slippery ledge</div>
-<audio id="phrase13" source src="audio/we were on a slippery ledge.mp3" preload="auto"></audio>
+<div><a class="btn8" onmousedown="javascript:playSound('phrase13');">we were on a slippery ledge
+<audio id="phrase13" source src="audio/we were on a slippery ledge.mp3" preload="auto"></audio></a></div>
 
 </div>
 
