--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="styling.css">
-	<script src ="columnGrid.js" type="text/javascript"> </script>
+<meta charset="utf-8">
+<link rel="stylesheet" href="stylingIndex.css">
+</head>
 
-	<script>
-	var btnSound = new Audio();
-	btnSound.src = "audio/button_05.wav";
-	</script>
-</head> 
-
+<center>
 <body>
-<div id="grid_container">
+<div class="forCat"><img src="images/cat.jpg" alt="" width="80px" align="left"><br></div>
+<div id="logo">Лингвистический аудио тренажер</div><hr>
+<nav id="menu">
+ <a href="story01.html" onmousedown="btnSound.play();">Истории</a>
+ <a href="words/index.html" onmousedown="btnSound.play()">Важные слова</a>
+ <a href="info/ofTheAuthor.html" target="_blank" onmousedown="btnSound.play()">об Аудиотренажерах</a>
+</nav>
+<div class="forCat"><img src="images/flag_britaniya.jpg" alt="" width="80px" align="right"><br></div>
+<hr><hr>
 
+<div id="grid_container">
 <div><a class="button8" href="citationPhrases/phrases citation 01.html" onmousedown="btnSound.play();">Citation 01</a>
 <hr><hr>
 <div class="text">"The beginning is a very delicate time. Know then that it is the year Ten Thousand One Ninty One."</div><br>
@@ -98,9 +102,12 @@ Citation 12</a><hr><hr>
 <audio controls style="width:100%" src="audio/12.mp3"  type="audio/mpeg"></audio>
 </div>
 
-
-<a class="button9" onclick="location.href='story01.html';" onmousedown="btnSound.play();">перейти к Истории</a>
 </div>
-
+	<hr>
+	<marquee direction="right" style="color:#C08D44; font-size: 15px; line-height: 100%; text-shadow: #000 0px 1px 1px;"><h3>авторская методика Владимира Матусевича </h3></marquee>
+	<hr>
+<script>var btnSound = new Audio(); btnSound.src = "audio/button_05.wav"; </script>
+<script src ="columnGrid.js" type="text/javascript"> </script>
 </body>
+</center>
 </html>
