--- a/citation_01/Citations_01.html
+++ b/citation_01/Citations_01.html
@@ -37,7 +37,7 @@
 <q> As Carl Sagan<span class="sound" onmousedown="javascript:playSound('phrase05');"> has put it: </span><span class="sound" onmousedown="javascript:playSound('phrase06');"> we live </span><span class="sound" onmousedown="javascript:playSound('phrase07');"> on an insignificant planet </span><span class="sound" onmousedown="javascript:playSound('phrase08');"> of a humdrum star </span><span class="sound" onmousedown="javascript:playSound('phrase09');"> lost in a galaxy </span><span class="sound" onmousedown="javascript:playSound('phrase10');"> tucked away in </span><span class="sound" onmousedown="javascript:playSound('phrase11');"> some forgotten corner </span>of the universe<span class="sound" onmousedown="javascript:playSound('phrase12');"> in which there are</span><span class="sound" onmousedown="javascript:playSound('phrase13');"> far more galaxes </span>than people </q>.</p>
 
 <audio id="phrase05" source src="audio/has put it.mp3" preload="auto"></audio>
-<audio id="phrase06" source src="audio/we live.mp3" preload="auto"></audio>
+<audio id="phrase06" source src="audio/we live.wav" preload="auto"></audio>
 <audio id="phrase07" source src="audio/on an insignificant planet.mp3" preload="auto"></audio>
 <audio id="phrase08" source src="audio/of a humdrum star.mp3" preload="auto"></audio>
 <audio id="phrase09" source src="audio/lost in a galaxy.mp3" preload="auto"></audio>
@@ -51,9 +51,6 @@
 <img src="images/play.png"></img></a>
 <a class="pause" onclick="document.getElementById('player3').pause()"> 
 <img src="images/pause.png"></img></a>
-
-<q>and built<span class="sound" onmousedown="javascript:playSound('phrase14');"> and the arts.</span><span class="sound" onmousedown="javascript:playSound('phrase15');">Their caravans </span><span class="sound" onmousedown="javascript:playSound('phrase16');"> crossed the desert  </span>opening up <span class="sound" onmousedown="javascript:playSound('phrase17');"> the first trade routes</span></q>.</p>
-
 
 
 <audio id="phrase14" source src="audio/and the arts.mp3" preload="auto"></audio>
