--- a/story01.html
+++ b/story01.html
@@ -57,21 +57,21 @@
 </a></div>
 
 <div class="photo">
-<a href="#" onmousedown="javascript:playAudio('audio05');">
+<a href="#" onmousedown="javascript:playAudio('audio03');">
 <audio src="audio01/it boils down to the same we are nothing special.mp3" preload="auto"></audio>
 <img class="grayscale" src="images/rose_painting.jpg" style="border:none; height:260px; width:170px;">
 </a></div>
 
 <audio id="audio06" src="audio01/star.mp3" preload="auto"></audio>
-<audio id="audio07" src="audio01/the priciple.mp3" preload="auto"></audio>
-<audio id="audio08" src="audio01/this priciple.mp3" preload="auto"></audio>
+<audio id="audio07" src="audio01/the priciple.wav" preload="auto"></audio>
+<audio id="audio08" src="audio01/this priciple.wav" preload="auto"></audio>
 <audio id="audio09" src="audio01/the cosmos.mp3" preload="auto"></audio>
 <audio id="audio10" src="audio01/places.mp3" preload="auto"></audio>
 <audio id="audio11" src="audio01/no left.mp3" preload="auto"></audio>
 <audio id="audio12" src="audio01/no edges.mp3" preload="auto"></audio>
 <audio id="audio13" src="audio01/no down.mp3" preload="auto"></audio>
 <audio id="audio14" src="audio01/no center.mp3" preload="auto"></audio>
-<audio id="audio15" src="audio01/corner.mp3" preload="auto"></audio>
+<audio id="audio15" src="audio01/corner.wav" preload="auto"></audio>
 <audio id="audio16" src="audio01/galaxes.mp3" preload="auto"></audio>
 <audio id="audio17" src="audio01/directions.mp3" preload="auto"></audio>
 <audio id="audio18" src="audio01/five hundred.mp3" preload="auto"></audio>
