--- a/story01.html
+++ b/story01.html
@@ -63,8 +63,8 @@
 </a></div>
 
 <audio id="audio06" src="audio01/star.mp3" preload="auto"></audio>
-<audio id="audio07" src="audio01/the priciple.wav" preload="auto"></audio>
-<audio id="audio08" src="audio01/this priciple.wav" preload="auto"></audio>
+<audio id="audio07" src="audio01/the principle.wav" preload="auto"></audio>
+<audio id="audio08" src="audio01/this principle.wav" preload="auto"></audio>
 <audio id="audio09" src="audio01/the cosmos.mp3" preload="auto"></audio>
 <audio id="audio10" src="audio01/places.mp3" preload="auto"></audio>
 <audio id="audio11" src="audio01/no left.mp3" preload="auto"></audio>
