--- a/story01.html
+++ b/story01.html
@@ -81,8 +81,8 @@
 
 <div class="playerBox">
 <a href="javascript:playAudio('audio06');">&#9830; Star</a><br/>
-<a href="javascript:playAudio('audio07');">&#9830; the Priciple</a><br/>
-<a href="javascript:playAudio('audio08');">&#9830; this Priciple</a><br/>
+<a href="javascript:playAudio('audio07');">&#9830; the Principle</a><br/>
+<a href="javascript:playAudio('audio08');">&#9830; this Principle</a><br/>
 <a href="javascript:playAudio('audio09');">&#9830; the Cosmos</a><br/>
 <a href="javascript:playAudio('audio10');">&#9830; Places</a><br/>
 <a href="javascript:playAudio('audio11');">&#9830; no Left</a><br/>
