--- a/story02.html
+++ b/story02.html
@@ -24,7 +24,7 @@
 <div id="logo">Отрывки * Akhenaten & The Antediluvian World</div><hr>
 <nav id="menu">
 	<a href="citation_02/Citations_02.html" onclick="btnSound.play()">Цитаты</a>
-	<a href="../citations/index.html" onmousedown="btnSound.play()">к Словам</a>
+	<a href="index.html" onmousedown="btnSound.play()">к другим Цитатам</a>
 </nav>
 <hr><hr>
 <div id="wrapper">
