--- a/story03.html
+++ b/story03.html
@@ -21,7 +21,7 @@
 <div id="logo">отрывки * the Sumerians</div><hr>
 <nav id="menu">
 	<a href="citation_03/Citations_03.html" onclick="btnSound();" embed src="audio/bleep.wav">Цитаты</a>
-	<a href="../citations/index.html" onclick="btnSound();">к другим Цитатам</a>
+	<a href="index.html" onclick="btnSound();">к другим Цитатам</a>
 </nav>
 
 	<hr><hr>
