--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="logo">Лингвистический аудио тренажер</div><hr>
 <nav id="menu">
  <a href="story01.html" onmousedown="btnSound.play();">Истории</a>
- <a href="words/index.html" onmousedown="btnSound.play()">Важные слова</a>
+ <a href="words/word_01.html" onmousedown="btnSound.play()">Важные слова</a>
  <a href="info/ofTheAuthor.html" target="_blank" onmousedown="btnSound.play()">об Аудиотренажерах</a>
 </nav>
 <div class="forCat"><img src="images/flag_britaniya.jpg" alt="" width="80px" align="right"><br></div>
