--- a/citationPhrases/citation10/phrases10.html
+++ b/citationPhrases/citation10/phrases10.html
@@ -80,8 +80,8 @@
 
 </div>
 
-<a class="btn9" style="float: left; width: 25%;" onclick="location.href='../../index.html';" onmousedown="btnSound.play();">Возвратиться к Цитатам</a>
-<a class="btn9" style="float: right; width: 25%;" onclick="location.href='../../../index.html';" onmousedown="btnSound.play();">Перейти на Стартовую</a>
+<a class="btn9" style="float: left; width: 25%;" onclick="location.href='Citation10.html';" onmousedown="btnSound.play();">Возвратиться к Цитатам</a>
+<a class="btn9" style="float: right; width: 25%;" onclick="location.href='../../index.html';" onmousedown="btnSound.play();">Перейти на Стартовую</a>
 
 </div>
 
