--- a/story01.html
+++ b/story01.html
@@ -20,7 +20,7 @@
 <div id="logo">Отрывки * A Simple Principle</div><hr>
 <nav id="menu">
 	<a href="citation_01/Citations_01.html" onclick="btnSound();" embed src="audio/bleep.wav">Цитаты</a>
-	<a href="index.html" onclick="btnSound();">к другим Цитатам</a>
+	<a href="index.html" onclick="btnSound();">на Стартовую</a>
 </nav>
 <hr><hr>
 	
