--- a/story03.html
+++ b/story03.html
@@ -108,7 +108,7 @@
 </div>
 
 <a class="btn9" style="float: left; width: 21%;" onclick="location.href='story02.html';" onmousedown="btnSound.play();">Предыдущая история</a>
-<a class="btn9" style="float: right; width: 19%;" onclick="location.href='#';" onmousedown="btnSound.play();">Следующая история</a>
+<a class="btn9" style="float: right; width: 19%;" onclick="location.href='story04.html';" onmousedown="btnSound.play();">Следующая история</a>
 </div>
 
 <script src ="channels.js" 	type="text/javascript"></script>
