--- a/story04.html
+++ b/story04.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title> story 4 </title>
-<link rel="stylesheet" href="stylingStory.css">
+<link rel="stylesheet" href="styling_stories.css">
 <script src="columnGrid.js" type="text/javascript"></script>
 <style> #wrapper{ background-color:#FF8B00; } </style>
 
