--- a/citation_01/Citations_01.html
+++ b/citation_01/Citations_01.html
@@ -53,7 +53,7 @@
 <audio id="phrase17" source src="audio/the first trade routes.mp3" preload="auto"></audio>
 </div>
 
-<a class="btn9" style="float: right; width: 19%;" onclick="location.href='phrases_01.html';" onmousedown="btnSound.play();">Фразы</a>
+<a class="btn9" style="float: right; width: 19%;" onclick="location.href='#';" onmousedown="btnSound.play();">Фразы (нет пока)</a>
 <a class="btn9" style="float: left; width: 21%;" onclick="location.href='../story01.html';" onmousedown="btnSound.play();">возвратиться к Истории</a>
 </div>
 
