--- a/story04.html
+++ b/story04.html
@@ -18,8 +18,8 @@
 		
 <div id="logo">отрывки: Wonder Monuments</div><hr>
 <nav id="menu">
-	<a href="citation_04/Citations_04.html" onclick="btnSound();" embed src="audio/bleep.wav">Цитаты</a>
-	<a href="../citations/index.html" onclick="btnSound();">к другим Цитатам</a>
+	<a href="№" onclick="btnSound();" embed src="audio/bleep.wav">Цитаты</a>
+	<a href="index.html" onclick="btnSound();">к другим Цитатам</a>
 </nav> <hr><hr>
 
 <div id="wrapper">
