--- a/citation_02/Citations_02.html
+++ b/citation_02/Citations_02.html
@@ -1,5 +1,4 @@
-\<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" 
-"http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -59,7 +58,7 @@
 <audio id="phrase19" source src="audio/by American politician.mp3" preload="auto"></audio>
 </div>
 
-<a class="btn9" style="float: right; width: 19%;" onclick="location.href='phrases_02.html';" onmousedown="btnSound.play();">Фразы</a>
+<a class="btn9" style="float: right; width: 19%;" onclick="location.href='#';" onmousedown="btnSound.play();">Фразы (пока нет)</a>
 <a class="btn9" style="float: left; width: 21%;" onclick="location.href='../story02.html';" onmousedown="btnSound.play();">возвратиться к Истории</a>
 </div>
 	<script> 	var btnSound = new Audio();
