--- a/story01.html
+++ b/story01.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 
 <title> story01 </title>
-<link rel="stylesheet" href="stylingStory.css">
+<link rel="stylesheet" href="styling_stories.css">
 <style>
 #wrapper {background:url('images/tiles.jpg');}
 </style>
@@ -28,77 +28,102 @@
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio01');">
-<audio hidden id="audio01" preload="auto" source src="audio01/special places or directions in the Universe.mp3"></audio>
-<img class="contrast" src="images/saturn_tears.gif" style="border:none; height:140px; width:120px;">
+<audio id="audio01" src="audio01/1.mp3" preload="auto"></audio>
+<img class="opacity" src="images/red_birds.gif" style="border:none; height:290px; width:220px;">
 </a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio02');">
-<audio id="audio02" src="audio01/the Copernican Cosmological Mediocrity Principle.mp3" preload="auto"></audio>
-<img class="opacity" src="images/red_birds.gif" style="border:none; height:260px; width:170px;">
+<audio id="audio02" src="audio01/2.mp3" preload="auto"></audio>
+<img class="blur" src="images/leaf.jpg" style="border:none; height:290px; width:210px;">
 </a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio03');">
-<audio id="audio03" src="audio01/it boils down to the same we are nothing special.mp3" preload="auto"></audio>
-<img class="blur" src="images/leaf.jpg" style="border:none; height:260px; width:170px;">
+<audio hidden id="audio03" preload="auto" source src="audio01/3.mp3"></audio>
+<img class="saturate" src="images/castle.jpg" style="border:none; height:290px; width:195px;">
 </a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio04');">
-<audio hidden id="audio04" preload="auto" source src="audio01/no center no edges no up no down no left or right.mp3"></audio>
-<img class="saturate" src="images/castle.jpg" style="border:none; height:260px; width:170px;">
+<audio id="audio04" preload="auto" src="audio01/4.mp3" preload="auto"></audio>
+<img class="sepia" src="images/babilonians.jpg" style="border:none; height:290px; width:220px;">
 </a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio05');">
-<audio id="audio05" src="audio01/the Principle is we are nothing special.mp3" preload="auto"></audio>
-<img class="sepia" src="images/babilonians.jpg" style="border:none; height:260px; width:190px;">
+<audio id="audio05" preload="auto" src="audio01/5.mp3" preload="auto"></audio>
+<img class="grayscale" src="images/rose_painting.jpg" style="border:none; height:290px; width:220px;">
+</a></div>
+<div id="playerBox">
+<div id="trackbox"></div></div>
+
+<div id="grid_container">
+<div class="text"><a class="text"  href="#" onmousedown="javascript:playAudio('phrase01');">
+no up no down
+<audio id="phrase01" source src="audio01/no up no down.mp3" type="audio/mpeg" preload="auto"></audio>
+
 </a></div>
 
-<div class="photo">
-<a href="#" onmousedown="javascript:playAudio('audio03');">
-<audio src="audio01/it boils down to the same we are nothing special.mp3" preload="auto"></audio>
-<img class="grayscale" src="images/rose_painting.jpg" style="border:none; height:260px; width:170px;">
+<div class="text"><a class="text" href="#" onmousedown="javascript:playAudio('phrase02');">
+<audio id="phrase02" source src="audio01/further and further out.mp3" type="audio/mpeg" preload="auto"></audio>
+further and further out
 </a></div>
 
-<audio id="audio06" src="audio01/star.mp3" preload="auto"></audio>
-<audio id="audio07" src="audio01/the principle.wav" preload="auto"></audio>
-<audio id="audio08" src="audio01/this principle.wav" preload="auto"></audio>
-<audio id="audio09" src="audio01/the cosmos.mp3" preload="auto"></audio>
-<audio id="audio10" src="audio01/places.mp3" preload="auto"></audio>
-<audio id="audio11" src="audio01/no left.mp3" preload="auto"></audio>
-<audio id="audio12" src="audio01/no edges.mp3" preload="auto"></audio>
-<audio id="audio13" src="audio01/no down.mp3" preload="auto"></audio>
-<audio id="audio14" src="audio01/no center.mp3" preload="auto"></audio>
-<audio id="audio15" src="audio01/corner.wav" preload="auto"></audio>
-<audio id="audio16" src="audio01/galaxes.mp3" preload="auto"></audio>
-<audio id="audio17" src="audio01/directions.mp3" preload="auto"></audio>
-<audio id="audio18" src="audio01/five hundred.mp3" preload="auto"></audio>
-<audio id="audio19" src="audio01/a humdrum star.mp3" preload="auto"></audio>
-<audio id="audio20" src="audio01/in the universe.mp3" preload="auto"></audio>
-<audio id="audio21" src="audio01/years.mp3" preload="auto"></audio> 
+<div class="text"><a class="text"  href="#" onmousedown="javascript:playAudio('phrase03');">
+<audio id="phrase03" source src="audio01/for almost 500 years.mp3" type="audio/mpeg" preload="auto"></audio>
+for almost 500 years
+</a></div>
 
-<div class="playerBox">
-<a href="javascript:playAudio('audio06');">&#9830; Star</a><br/>
-<a href="javascript:playAudio('audio07');">&#9830; the Principle</a><br/>
-<a href="javascript:playAudio('audio08');">&#9830; this Principle</a><br/>
-<a href="javascript:playAudio('audio09');">&#9830; the Cosmos</a><br/>
-<a href="javascript:playAudio('audio10');">&#9830; Places</a><br/>
-<a href="javascript:playAudio('audio11');">&#9830; no Left</a><br/>
-<a href="javascript:playAudio('audio12');">&#9830; no Edges</a><br/>
-<a href="javascript:playAudio('audio13');">&#9830; no Down</a><br/>
-</div>
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase04');">
+the cosmos
+<audio id="phrase04" source src="audio01/the cosmos.mp3" preload="auto"></audio>
+</a></div>
 
-<div class="playerBox">
-<a href="javascript:playAudio('audio14');">&#9830; no Center</a><br/>
-<a href="javascript:playAudio('audio15');">&#9830; Corner</a><br/>
-<a href="javascript:playAudio('audio16');">&#9830; Galaxes</a><br/>
-<a href="javascript:playAudio('audio17');">&#9830; Directions</a><br/>
-<a href="javascript:playAudio('audio18');">&#9830; Five Hundred</a><br/>
-<a href="javascript:playAudio('audio19');">&#9830; a Humdrum Star</a><br/>
-<a href="javascript:playAudio('audio20');">&#9830; in the Universe</a><br/>
-<a href="javascript:playAudio('audio21');">&#9830; Years</a><br/>
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase05');">
+the principle is simple
+<audio id="phrase05" src="audio01/the principle is simple.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase06');">
+we are nothing special
+<audio id="phrase06" src="audio01/we are nothing Special.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase07');">
+this principle
+<audio id="phrase07" source src="audio01/this principle.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase08');">
+to confirm this principle
+<audio id="phrase08" src="audio01/to confirm this principle.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase09');">
+special places or directions
+<audio id="phrase09" source src="audio01/special places or directions.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase10');">
+over and over again
+<audio id="phrase10" source src="audio01/over and over again.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase11');">
+no center no edges
+<audio id="phrase11" source src="audio01/no center no edges.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase12');">
+no left or right
+<audio id="phrase12" source src="audio01/no left or right.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase13');">
+in the universe
+<audio id="phrase13" source src="audio01/in the universe.mp3" preload="auto"></audio>
+</a></div>
 </div>
 
 <a class="btn9" style="float:right; width:19%;" onmousedown="btnSound.play()" onclick="location.href='story02.html';">История следующая</a>
