--- a/story01.html
+++ b/story01.html
@@ -131,6 +131,8 @@ in the universe
 <script> 	var btnSound = new Audio(); 
 			btnSound.src = "audio/button_06.mp3"; </script>
 <script src ="channels.js" 	type="text/javascript"></script>
+<script src ="story01.js" 			type="text/javascript"></script>
+<script src ="columnGrid.js" 	type="text/javascript"></script>
 <script type=text/javascript language=JavaScript>
 <!--
 function q3_onclick()
