--- a/story02.html
+++ b/story02.html
@@ -4,14 +4,13 @@
 <meta charset="utf-8">
 
 <title> phrases work </title>
-<link rel="stylesheet" href="stylingStory.css">
+<link rel="stylesheet" href="styling_stories.css">
 <style>
 	#wrapper {	
 	background:url('images/sea.jpg');
 	background-size: 100% 100%;
-	background-repeat: no-repeat;}
-	a.btn9 {
-	color: #fff;}</style>
+	background-repeat: no-repeat;} </style>
+	
 <script> 	var btnSound = new Audio(); 
 			btnSound.src = "audio/button_06.mp3"; </script>
 </head>
@@ -24,86 +23,119 @@
 <div id="logo">Отрывки * Akhenaten & The Antediluvian World</div><hr>
 <nav id="menu">
 	<a href="citation_02/Citations_02.html" onclick="btnSound.play()">Цитаты</a>
-	<a href="index.html" onmousedown="btnSound.play()">к другим Цитатам</a>
+	<a href="../citations/index.html" onmousedown="btnSound.play()">к Словам</a>
 </nav>
 <hr><hr>
-<div id="wrapper">
 
+<div id="wrapper">
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio01');">
-<audio id="audio01" src="audio02/bigs/1.mp3" preload="auto"></audio>
-<img class="grayscale" src="images/akhenaten.jpg" style="border:none; height:260px; width:210px;">
+<audio id="audio01" src="audio02/1.mp3" preload="auto"></audio>
+<img class="saturate" src="images/akhenaten.jpg" style="border:none; height:290px; width:220px;">
 </a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio02');">
-<audio hidden id="audio02" preload="auto" source src="audio02/bigs/2.mp3"></audio>
-<img class="blur" src="images/nefertiti.jpg" style="border:none; height:260px; width:170px;">
+<audio hidden id="audio02" preload="auto" source src="audio02/2.mp3"></audio>
+<img class="opacity" src="images/nefertiti.jpg" style="border:none; height:290px; width:210px;">
 </a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio03');">
-<audio hidden id="audio03" preload="auto" source src="audio02/bigs/3.mp3"></audio>
-<img class="brightness" src="images/hieroglyphs.jpg" style="border:none; height:260px; width:190px;">
+<audio hidden id="audio03" preload="auto" source src="audio02/3.mp3"></audio>
+<img class="opacity" src="images/hieroglyphs.jpg" style="border:none; height:290px; width:190px;">
 </a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio04');">
-<audio id="audio04" src="audio02/bigs/4.mp3" preload="auto"></audio>
-<img class="brightness" src="images/sphinx.jpg" style="border:none; height:260px; width:170px;">
+<audio id="audio04" src="audio02/4.mp3" preload="auto"></audio>
+<img class="opacity" src="images/sphinx.jpg" style="border:none; height:290px; width:220px;">
 </a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio05');">
-<audio id="audio05" src="audio02/bigs/5.mp3" preload="auto"></audio>
-<img class="opacity" src="images/predator.jpg" style="border:none; height:260px; width:170px;">
+<audio id="audio05" src="audio02/5.mp3" preload="auto"></audio>
+<img class="" src="images/predator.jpg" style="border:none; height:290px; width:195px;">
 </a></div>
 
-<div class="playerBox">
-<audio id="audio06" src="audio02/of these ancient leaders.mp3" preload="auto"></audio>
-<audio id="audio07" src="audio02/he was the husband of Nefertiti.mp3" preload="auto"></audio>
-<audio id="audio08" src="audio02/and father of Tutankhamun.mp3" preload="auto"></audio>
-<audio id="audio09" src="audio02/but could he also have been an alien king.mp3" preload="auto"></audio>
-<audio id="audio10" src="audio02/before the island sank.mp3" preload="auto"></audio>
-<audio id="audio11" src="audio02/its leaders left for Egypt Mexico and Peru.mp3" preload="auto"></audio>
-<audio id="audio12" src="audio02/to become rulers of these countries.mp3" preload="auto"></audio>
-<audio id="audio13" src="audio02/and reveals another intriguing detail.mp3" preload="auto"></audio>
-<audio id="audio14" src="audio02/or the Cosmological Principle.mp3" preload="auto"></audio>
-<audio id="audio15" src="audio02/it all boils down to the same thing.mp3" preload="auto"></audio> 
+<div id="playerBox">
+<div id="trackbox"></div></div>
 
-<a href="javascript:playAudio('audio06');">&#9830; the ancient leaders </a><br/>
-<a href="javascript:playAudio('audio07');">&#9830; Nefertiti's husband </a><br/>
-<a href="javascript:playAudio('audio08');">&#9830; Tutankhamun's father </a><br/>
-<a href="javascript:playAudio('audio09');">&#9830; he could be an alien king </a><br/>
-<a href="javascript:playAudio('audio10');">&#9830; the sinking island </a><br/>
+<div id="grid_container">
+<div class="text"><a class="text"  href="#" onmousedown="javascript:playAudio('phrase01');">
+within a book
+<audio id="phrase01" source src="audio02/within a book.mp3" type="audio/mpeg" preload="auto"></audio>
+
+</a></div>
+
+<div class="text"><a class="text" href="#" onmousedown="javascript:playAudio('phrase02');">
+to become rulers of
+<audio id="phrase02" source src="audio02/to become rulers of.mp3" type="audio/mpeg" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text"  href="#" onmousedown="javascript:playAudio('phrase03');">
+these ancient leaders
+<audio id="phrase03" source src="audio02/these ancient leaders.mp3" type="audio/mpeg" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase04');">
+well-known
+<audio id="phrase04" source src="audio02/well-known.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase05');">
+before the island sank
+<audio id="phrase05" src="audio02/before the island sank.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase06');">
+published in 1882
+<audio id="phrase06" src="audio02/published in 1882.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase07');">
+of these countries
+<audio id="phrase07" source src="audio02/of these countries.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase08');">
+Egypt, Mexico and Peru
+<audio id="phrase08" src="audio02/Egypt Mexico and Peru.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase09');">
+of Tutankhamen
+<audio id="phrase09" source src="audio02/of Tutankhamun.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase10');">
+by American politician
+<audio id="phrase10" source src="audio02/by American politician.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase11');">
+of these countries
+<audio id="phrase11" source src="audio02/of these countries.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase12');">
+of these ancient leaders
+<audio id="phrase12" source src="audio02/of these ancient leaders.mp3" preload="auto"></audio>
+</a></div>
+
+<div class="text"><a class="text" onmousedown="javascript:playAudio('phrase13');">
+the husband of
+<audio id="phrase13" source src="audio02/the husband of.mp3" preload="auto"></audio>
+</a></div>
+
 </div>
 
-<div class="playerBox">
-<a href="javascript:playAudio('audio11');">&#9830; they went to Egypt, Mexico, and Peru </a><br/>
-<a href="javascript:playAudio('audio12');">&#9830; the rulers of these countries </a><br/>
-<a href="javascript:playAudio('audio13');">&#9830; another intriguing detail </a><br/>
+<a class="btn9" style="float:left; width:21%;" onclick="location.href='story01.html';" onmousedown="btnSound.play();">Предыдущая история</a>
+<a class="btn9" style="float:right; width:19%;" onclick="location.href='story03.html';" onmousedown="btnSound.play();">Следующая история </a>
 </div>
-
-<a class="btn9" style="float: left; width: 21%;" onclick="location.href='story01.html';" onmousedown="btnSound.play();">Предыдущая история</a>
-<a class="btn9" style="float: right; width: 19%;" onclick="location.href='story03.html';" onmousedown="btnSound.play();">Следующая история </a>
-
-</div>
-<script src ="channels.js" 	type="text/javascript"></script>
-
-<script type=text/javascript language=JavaScript>
-<!--
-function q3_onclick()
-{
-document.getElementById('q2').style.display='';
-document.getElementById('q4').style.display='';
-}
-function q1_onclick()
-{
-document.getElementById('q2').style.display='none';
-document.getElementById('q4').style.display='none';
-}
-//--></script>
-
+<script src ="channels.js" 		type="text/javascript"></script>
+<script src ="story02.js" 		type="text/javascript"></script>
+<script src ="columnGrid.js" 	type="text/javascript"></script>
 </body>
 </center>
 
