--- a/story01.html
+++ b/story01.html
@@ -87,7 +87,7 @@ the principle is simple
 
 <div class="text"><a class="text" onmousedown="javascript:playAudio('phrase06');">
 we are nothing special
-<audio id="phrase06" src="audio01/we are nothing Special.mp3" preload="auto"></audio>
+<audio id="phrase06" src="audio01/we are nothing special.mp3" preload="auto"></audio>
 </a></div>
 
 <div class="text"><a class="text" onmousedown="javascript:playAudio('phrase07');">
