--- a/story02.html
+++ b/story02.html
@@ -89,13 +89,13 @@ before the island sank
 </a></div>
 
 <div class="text"><a class="text" onmousedown="javascript:playAudio('phrase06');">
-published in 1882
-<audio id="phrase06" src="audio02/published in 1882.mp3" preload="auto"></audio>
+Egyptian ruler
+<audio id="phrase06" src="audio02/Egyptian ruler.mp3" preload="auto"></audio>
 </a></div>
 
 <div class="text"><a class="text" onmousedown="javascript:playAudio('phrase07');">
-of these countries
-<audio id="phrase07" source src="audio02/of these countries.mp3" preload="auto"></audio>
+published in 1882
+<audio id="phrase07" source src="audio02/published in 1882.mp3" preload="auto"></audio>
 </a></div>
 
 <div class="text"><a class="text" onmousedown="javascript:playAudio('phrase08');">
@@ -119,8 +119,8 @@ of these countries
 </a></div>
 
 <div class="text"><a class="text" onmousedown="javascript:playAudio('phrase12');">
-of these ancient leaders
-<audio id="phrase12" source src="audio02/of these ancient leaders.mp3" preload="auto"></audio>
+the Antediluvian world
+<audio id="phrase12" source src="audio02/the Antediluvian world.mp3" preload="auto"></audio>
 </a></div>
 
 <div class="text"><a class="text" onmousedown="javascript:playAudio('phrase13');">
