--- a/info/ofTheMethod.html
+++ b/info/ofTheMethod.html
@@ -5,7 +5,7 @@
 		<title>О методике</title>
 		<meta name="description" content="A basic responsive web page – an example from Chapter 1">
 		<meta name="viewport" content="width=device-width">
-		<link rel="stylesheet" href="ofTheMethod.css">
+		<link rel="stylesheet" href="about.css">
 	</head>
 	<body>
 		<div class="IntroWrapper">
@@ -14,11 +14,14 @@
 		<div class="HowToMake">
 			<h3 class="SubHeader">О Методе</h3>
 			<ol class="MethodWrapper">
-				<li>Уважаемые любители и профессионалы изучения английского языка!</li>
-				<li>Приложение, которое вы решили сейчас опробовать, не создано напрямую для обучения иностранному языку. Что же это тогда?</li>
+				<li>Уважаемые любители и профессионалы изучения английского языка!<br>
+				Приложение, которое вы решили сейчас опробовать, не создано напрямую для обучения иностранному языку. Что же это тогда?</li>
 				<li>Во-первых, вы видите не готовый продукт, а проект - он постоянно строится, дополняется, всегда окутан строительными лесами. Сначала немного, а потом все больше, больше, и затем мы окажемся в лабиринте слов и выражений, выстроенном для вашего удовольствия.</li>
-				<li>Это - исследовательская лаборатория лингвиста, занимающегося изучением современного английского языка, с опорой не на письменные, а на медийные источники, насыщающие сферы планеты последние сто лет. </li>
-				<li>Автор рассматривает, как именно говорят (звучат) носители языка, а также представители других стран, говорящие на уровне носителя.</li>
+				<li>Это - исследовательская лаборатория лингвиста, занимающегося изучением современного английского языка, с опорой не на письменные, а на медийные источники, насыщающие сферы планеты последние сто лет. <br> И, так как этого добра в интернете скопилось немало, мы постараемся использовать их для нашего изучения иностранных языков. </li>
+				<li>Человек (условно – «студент»), выучил иностранный язык, браво!<br>Далее ему рекомендуют побольше слушать новости, аудиокниги, смотреть фильмы в оригинале. В общем-то, это нужно начинать делать с первых дней занятий на курсах, помимо старательного выполнения домашнего задания. Но это нелегко. Очень большие объемы. Ты просто плывешь.</li>
+				<li>Вот тут и появляется эта идея аудио пособий или аудио тренажеров. <br>Автор рассматривает, как именно говорят (звучат) носители языка, а также представители других стран, говорящие на уровне носителя.</li>
+				<li>Причем мы не идем на поводу у некоторых «аутентичных» аудио курсов, где дикторы коверкают язык, имитируя иностранные акценты, стремясь показать, как говорят студенты из разных стран. Надо понимать, что британцы развлекаются: они продают нам собственный язык, втридорога, и не знают уже, что бы еще придумать. Я включу имитацию акцентов в аудио тренажер только если она исполняется на уровне актерского мастерства, к примеру, уровня Джонни Деппа, изображающего манеру латиноса, или Анжелины Жоли в роли Наташи.</li>
+				<li>Для наших аудио пособий мы будем выбирать самые хорошие голоса: актеров, дикторов. Поверьте, в произнесении некой фразы задействовано немало механизмов, и мне, русскоговорящему, непросто услышать и понять, как именно запустить такие же механизмы внутри себя, чтобы быть способным повторить или воспроизвести эту фразу. </li>
 				<li>Для рассмотрения образцов речи используются специализированные компьютерные программы, позволяющие увидеть отдельные звуки речи и затем "распилить" большой отрывок на полезные выражения. А уже эти фразы и выражения могут стать аудио пособием для изучающих иностранный язык.</li>
 				<li>Таким образом, вы можете применить результаты моего исследования для обогащения своего словарного запаса выражениями реального, а не теоретического, английского языка.</li>
 				<li>Аудирование – восприятие и понимание речи на слух. Развитие этого аспекта связано с прослушиванием радио и просмотром телевизионных программ, работой с аудио- и видеозаписями на языке оригинала. Аудирование в чистом виде должно настроить слух обучаемого на восприятие речи, вне зависимости от того насколько она прозвучит «странно» для неподготовленного – вследствие ли сильного акцента или из-за наличия небольших дефектов у говорящего. С тренировкой, ваш слух больше не воспринимает звучащие слова как «иностранный» нонсенс, а интерпретирует их, и мы понимаем передаваемую человеком мысль. Вот почему на всех этапах изучения иностранного языка все его шаги должны сопровождаться звуковыми иллюстрациями (цитатами, отрывками), где мы услышим прекрасно-исполненные образцы речи, произнесенные как мужчинами, так и женщинами разного возраста и статуса, узнаваемыми актерами кино или политиками, прирожденными ораторами.</li>
