--- a/story02.html
+++ b/story02.html
@@ -20,7 +20,7 @@
 	<div class="forCat">
 	<img src="images/flag_britaniya.jpg" width="70px" align="left"><br></div>
 		
-<div id="logo">Отрывки * Akhenaten &#38 The Antediluvian World</div><hr>
+<div id="logo">Отрывки: <q>Akhenaten &#38 The Antediluvian World</q></div><hr>
 <nav id="menu">
 	<a href="citation_02/Citations_02.html" onclick="btnSound.play()">Цитаты</a>
 	<a href="../citations/index.html" onmousedown="btnSound.play()">к Словам</a>
