--- a/story02.html
+++ b/story02.html
@@ -23,7 +23,7 @@
 <div id="logo">Отрывки: <q>Akhenaten &#38 The Antediluvian World</q></div><hr>
 <nav id="menu">
 	<a href="citation_02/Citations_02.html" onclick="btnSound.play()">Цитаты</a>
-	<a href="words/words_01.html" onmousedown="btnSound.play()">к Словам</a>
+	<a href="words/word_01.html" onmousedown="btnSound.play()">к Словам</a>
 </nav>
 <hr><hr>
 
