--- a/story01.html
+++ b/story01.html
@@ -17,9 +17,9 @@
 	<div class="forCat">
 	<img src="images/flag_britaniya.jpg" width="70px" align="left"><br></div>
 		
-<div id="logo">Отрывки * A Simple Principle</div><hr>
+<div id="logo">Отрывки: <q>A Simple Principle</q></div><hr>
 <nav id="menu">
-	<a href="citation_01/Citations_01.html" onclick="btnSound();" embed src="audio/bleep.wav">Цитаты</a>
+	<a href="citation_01/Citations_01.html" onclick="btnSound();">Цитаты</a>
 	<a href="index.html" onclick="btnSound();">на Стартовую</a>
 </nav>
 <hr><hr>
