--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <nav id="menu">
  <a href="story01.html" onmousedown="btnSound.play();">Истории</a>
  <a href="words/word_01.html" onmousedown="btnSound.play()">Важные слова</a>
+ <a href="news/news.html" onmousedown="btnSound.play()">из Новостей</a>
  <a href="info/about.html" target="_blank" onmousedown="btnSound.play()">об Аудиотренажерах</a>
 </nav>
 <div class="forCat"><img src="images/flag_britaniya.jpg" alt="" width="80px" align="right"><br></div>
