--- a/words/word_01.html
+++ b/words/word_01.html
@@ -53,7 +53,7 @@
 
 <div id="trackbox"></div>
 
-<a class="btn9" style="float:right; width:19%;" onmousedown="btnSound.play()" onclick="location.href='word02.html';">следующее Слово</a>
+<a class="btn9" style="float:right; width:19%;" onmousedown="btnSound.play()" onclick="location.href='word_02.html';">следующее Слово</a>
 </div>
 
 <script>var btnSound = new Audio(); 
