--- a/words/word_01.html
+++ b/words/word_01.html
@@ -35,19 +35,19 @@
 </a></div>
 
 <div class="photo"  data-title="World">
-<a href="citation03.html" onmousedown="btnSound.play()">
+<a href="#" onmousedown="btnSound.play()">
 <img class="opacity" src="images/waterFall.gif" style="border:none; height:280px; width:180px;"></a></div>
 
 <div class="photo"  data-title="Universe">
-<a href="citation02.html" onmousedown="btnSound.play()">
+<a href="#" onmousedown="btnSound.play()">
 <img class="opacity" src="images/cyber.jpg" style="border:none; height:280px; width:180px;"></a></div>
 
 <div class="photo"  data-title="Travel">
-<a href="citation04.html" onmousedown="btnSound.play()">
+<a href="#" onmousedown="btnSound.play()">
 <img class="opacity" src="images/fern.jpg" style="border:none; height:280px; width:180px;"></a></div>
 
 <div class="photo"  data-title="Known">
-<a href="citation05.html" onmousedown="btnSound.play()">
+<a href="#" onmousedown="btnSound.play()">
 <img  class="opacity" src="images/known.jpg" style="border:none; height:280px; width:180px;"></a></div>
 
 
