--- a/words/word_01.html
+++ b/words/word_01.html
@@ -23,15 +23,15 @@
 <div class="photo" data-title="Push Now">
 <a href="#" onmousedown="javascript:playSequence();">
 <img class="saturate" src="images/drosteEffectClock.jpg" style="border:none; height:280px; width:180px;">
-<audio hidden id="track_01" preload="auto" source src="audio01/days of.wav"></audio>
-<audio hidden id="track_02" preload="auto" source src="audio01/days of the rains.wav"></audio>
-<audio hidden id="track_03" preload="auto" source src="audio01/billions of times.wav"></audio>
-<audio hidden id="track_04" preload="auto" source src="audio01/billions of times smaller.wav"></audio>
-<audio hidden id="track_05" preload="auto" source src="audio01/in this time.wav"></audio>
-<audio hidden id="track_06" preload="auto" source src="audio01/time of the.wav"></audio>
-<audio hidden id="track_07" preload="auto" source src="audio01/time of the great wetness.wav"></audio>
-<audio hidden id="track_08" preload="auto" source src="audio01/well into the time of the.wav"></audio>
-<audio hidden id="track_09" preload="auto" source src="audio01/is a very delicate time.wav"></audio>
+<audio hidden id="track_01" preload="auto" source src="audio01/days of.mp3"></audio>
+<audio hidden id="track_02" preload="auto" source src="audio01/days of the rains.mp3"></audio>
+<audio hidden id="track_03" preload="auto" source src="audio01/billions of times.mp3"></audio>
+<audio hidden id="track_04" preload="auto" source src="audio01/billions of times smaller.mp3"></audio>
+<audio hidden id="track_05" preload="auto" source src="audio01/in this time.mp3"></audio>
+<audio hidden id="track_06" preload="auto" source src="audio01/time of the.mp3"></audio>
+<audio hidden id="track_07" preload="auto" source src="audio01/time of the great wetness.mp3"></audio>
+<audio hidden id="track_08" preload="auto" source src="audio01/well into the time of the.mp3"></audio>
+<audio hidden id="track_09" preload="auto" source src="audio01/is a very delicate time.mp3"></audio>
 </a></div>
 
 <div class="photo"  data-title="World">
