--- a/story03.html
+++ b/story03.html
@@ -32,34 +32,32 @@
 <div class="photo">
 <a  href="#" onmousedown="javascript:playAudio('audio01');">
 <audio hidden id="audio01" preload="auto" source src="audio03/1.mp3"></audio>
-<img class="brightness" src="images/lion.jpg" style="border:none; height:290px; width:200px;"></a></div>
+<img class="brightness" src="images/lion.jpg" style="border:none; height:290px; width:190px;"></a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio02');">
 <audio hidden id="audio02" preload="auto" source src="audio03/2.mp3"></audio>
-<img class="contrast" src="images/gilgamesh.jpg" style="border:none; height:290px; width:190px;"></a></div>
+<img class="grayscale" src="images/gilgamesh.jpg" style="border:none; height:290px; width:190px;"></a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio03');">
 <audio hidden id="audio03" preload="auto" source src="audio03/3.mp3"></audio>
-<img class="opacity" src="images/sea.jpg" style="border:none; height:290px; width:200px;"></a></div>
+<img class="contrast" src="images/babilonians.jpg" style="border:none; height:290px; width:200px;"></a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio03');">
 <audio hidden id="audio03" preload="auto" source src="audio03/3.mp3"></audio>
-<img class="opacity" src="images/tile_roof.jpg" style="border:none; height:290px; width:200px;"></a></div>
+<img class="contrast" src="images/and_gun.jpg" style="border:none; height:290px; width:170px;"></a></div>
 
 <div class="photo">
 <a href="#" onmousedown="javascript:playAudio('audio04');">
 <audio hidden id="audio03" preload="auto" source src="audio03/4.mp3"></audio>
-<img class="brightness" src="images/babilonians.jpg" style="border:none; height:290px; width:190px;"></a></div>
+<img class="brightness" src="images/sea.jpg" style="border:none; height:290px; width:190px;"></a></div>
 
 <div class="playerBox">
 <a href="javascript:playAudio('audio06');">&#9830; they didn't yet make ceramics but they were builders
 <audio id="audio06" src="audio03/they didn't yet make ceramics but they were builders.mp3" preload="auto"></audio></a><br/>
-
 <audio id="audio07" src="audio03/they divided time into minutes and seconds.mp3" preload="auto"></audio>
-
 
 <audio id="audio09" src="audio03/their caravans crossed the desert.mp3" preload="auto"></audio>
 <audio id="audio10" src="audio03/their houses had mud brick walls on dry stone foundations.mp3" preload="auto"></audio>
