--- a/story03.html
+++ b/story03.html
@@ -5,9 +5,7 @@
 <title> story03 </title>
 <link rel="stylesheet" href="stylingStory.css">
 
-<style>
-	#wrapper {background-image:url('images/gilgamesh_.jpg');
-		background-size:100% 100%;} </style>
+<style>	#wrapper{ background-color:#484540; } </style>
 <script> 	var btnSound = new Audio(); 
 			btnSound.src = "audio/button_06.mp3"; </script>
 </head>
