--- a/words/word_02.html
+++ b/words/word_02.html
@@ -1,88 +1,70 @@
-<!DOCTYPE html>
 <html>
 <head>
-<title>accross the World</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="stylingCitations.css">
+<title>World citations</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="stylingTopics.css">
 <style>
-body{
-	font-family: sans-serif;
-	background-color: #000;
-	background-image: url('images/fern.jpg');
-	background-size: contain;
-	background-repeat: repeat-x;
-	font-size:20px;
-}
+body { 
+	background-image: url('images/amazingEarth.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat; }
+#container {background-color:#00008B; opacity:.9;}
 </style>
-	<script src ="columnGrid.js" type="text/javascript"> </script>
-	<script>
-	var btnSound = new Audio();
-	btnSound.src = "audio/bleep_05.wav";
-	</script>
-</head> 
-
-<center>	
+<script> 
+	var btnSound = new Audio(); 
+	btnSound.src = "audio/button_06.wav"; </script>
+<script src ="playIndex.js" type="text/javascript"></script>
+<script src ="playBox02.js" type="text/javascript"></script>
+</head>
+<center>		
 <body>
-		<div class="forCat">
-		<img src="images/cat.jpg" width="80px" align="left"><br>
-		</div>
+	<div class="forCat">
+	<img src="images/cat.jpg" width="80px" align="left"><br></div>
 		
-	<div id="logo">Аудио тренер * World</div>
+<div id="logo">Чудесное слово * World</div>
 	<hr>
-	<nav id="menu">
+<nav id="menu">
 	<a href="../../citations/index.html" onmousedown="btnSound.play()">к Цитатам</a>
 	<a href="../../index.html" onmousedown="btnSound.play()">к Темам</a>
-	</nav>
-		<div class="forCat">
-		<img src="images/flag_britaniya.jpg" alt="" width="80px" align="left"><br>
-		</div>
-	<hr>
-	<hr>
-<div id="grid_container">
+</nav>
+<div class="forCat">
+	<img src="images/flag_britaniya.jpg" width="80px" align="left"><br></div>
+	<hr><hr>
+<div class="wrapper">
+<div class="photo" data-title="Push Now">
+<a href="#" onmousedown="javascript:playSequence();">
+<img class="saturate" src="images/friscoTrain.jpg" style="border:none; height:280px; width:180px;">
+<audio hidden id="track_01" preload="auto" source src="audio02/days of.wav"></audio>
+<audio hidden id="track_02" preload="auto" source src="audio02/days of the rains.wav"></audio>
+<audio hidden id="track_03" preload="auto" source src="audio02/billions of times.wav"></audio>
+<audio hidden id="track_04" preload="auto" source src="audio02/billions of times smaller.wav"></audio>
+<audio hidden id="track_05" preload="auto" source src="audio02/in this time.wav"></audio>
+<audio hidden id="track_06" preload="auto" source src="audio02/time of the.wav"></audio>
+<audio hidden id="track_07" preload="auto" source src="audio02/time of the great wetness.wav"></audio>
+<audio hidden id="track_08" preload="auto" source src="audio02/well into the time of the.wav"></audio>
+<audio hidden id="track_09" preload="auto" source src="audio02/is a very delicate time.wav"></audio>
+</a></div>
 
-<div><a class="button8" href="#" onmousedown="btnSound.play();">Citation 01</a>
-<hr><hr>
-<div class="text">"Just how far had China's imperial fleet pushed the boundaries of the known <span style="color:gold;font-weight:bold">world</span>."</div><br>
-<audio controls source src="audio02/1.mp3" type="audio/mpeg"></audio>
+<div class="photo"  data-title="Universe">
+<a href="citation02.html" onmousedown="btnSound.play()">
+<img class="opacity" src="images/waterFall.gif" style="border:none; height:280px; width:180px;"></a></div>
+
+<div class="photo"  data-title="Travel">
+<a href="citation04.html" onmousedown="btnSound.play()">
+<img class="opacity" src="images/waterStairs.jpg" style="border:none; height:280px; width:180px;"></a></div>
+
+<div class="photo"  data-title="Known">
+<a href="citation05.html" onmousedown="btnSound.play()">
+<img  class="opacity" src="images/known.jpg" style="border:none; height:280px; width:180px;"></a></div>
+
+<div class="photo"  data-title="Time">
+<a href="citation01.html" onmousedown="btnSound.play()">
+<img class="opacity" src="images/nightTree.jpg" style="border:none; height:280px; width:180px;"></a></div>
+
+<div id="trackbox"></div>
+
+<a class="btn9" onclick="location.href='../index.html';" style="cursor:pointer; width:245px; line-height: 20px;" onmousedown="btnSound.play();">Возвратиться</a>
 </div>
-
-<div>
-<a class="button8" href="#" style="cursor:pointer;" onmousedown="btnSound.play();">
-Citation 02</a><hr><hr>
-<div class="text">"Attracting visitors from accross the <span style="color:gold;font-weight:bold">world</span>."</div><br>
-<audio controls style="width:100%" src="audio02/2.mp3"  type="audio/mpeg"></audio>
-</div>
-
-<div>
-<a class="button8" href="#" style="cursor:pointer;" onmousedown="btnSound.play();">
-Citation 03</a><hr><hr>
-<div class="text">"Hinduism is the oldest living religion in the <span style="color:gold;font-weight:bold">world</span>."</div><br>
-<audio controls src="audio02/3.mp3"  type="audio/mpeg"></audio>
-</div>
-
-<div>
-<a class="button8" href="#" style="cursor:pointer;" onmousedown="btnSound.play();">
-Citation 04</a><hr><hr>
-<div class="text">"The Sarasvati-Indo civilization developed here eventually becoming the <span style="color:gold;font-weight:bold">world</span>'s largest and most advanced surpassing even those of Egypt, Mesopotamia and China."</div><br>
-<audio controls src="audio02/4.mp3"  type="audio/mpeg"></audio>
-</div>
-
-<div>
-<a class="button8" href="#" style="cursor:pointer;" onmousedown="btnSound.play();">
-Citation 05</a><hr><hr>
-<div class="text">"Once upon a <span style="color:gold;font-weight:bold">time</span> there was a quiet little village in the French countryside."</div><br>
-<audio controls src="audio02/5.mp3"  type="audio/mpeg"></audio>
-</div>
-
-<div>
-<a class="button8" href="#" style="cursor:pointer;" onmousedown="btnSound.play();">
-Citation 06</a><hr><hr>
-<div class="text">"In this <span style="color:gold;font-weight:bold">time</span> the most precious substance in the universe is the spice melange."</div><br>
-<audio controls src="audio02/6.mp3"  type="audio/mpeg"></audio>
-</div>
-
-<a class="button9" onclick="location.href='../index.html';" style="cursor:pointer; width:245px; line-height: 20px; color:#FFE4B5;" onmousedown="btnSound.play();">Возвратиться к Словам</a>
-</div>
-
 </body>
+</center>
 </html>
