--- a/citation_03/phrases_03.html
+++ b/citation_03/phrases_03.html
@@ -1,9 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" 
-"http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>тренировочные фразы - 10</title>
+<title>тренировочные фразы - 03</title>
 <link rel="stylesheet" href="stylingPhrases.css">
 <script src ="columnGrid.js" type="text/javascript"></script>
 <script src ="channels.js" type="text/javascript"></script>
@@ -30,7 +29,7 @@
 </a></div>
 
 <div><a class="btn8" onmousedown="javascript:playSound('phrase04');">
-<div class="text">archeologists discovered</div>
+<div class="text">archaeologists discovered</div>
 <audio id="phrase04" source src="audio/archeologists discovered.mp3" preload="auto"></audio>
 </a></div>
 
@@ -82,15 +81,12 @@
 </div>
 
 <a class="btn9" style="float: left; width: 25%;" onclick="location.href='../story03.html';" onmousedown="btnSound.play();">возвратиться к Истории</a>
-<a class="btn9" style="float: right; width: 25%;" onclick="location.href='../../../index.html';" onmousedown="btnSound.play();">Перейти на Стартовую</a>
+<a class="btn9" style="float: right; width: 25%;" onclick="location.href='../index.html';" onmousedown="btnSound.play();">Перейти на Стартовую</a>
 
 </div>
-
 <script>
 var btnSound = new Audio();
-btnSound.src = "button_04.wav";
-</script>
-
+btnSound.src = "button_04.wav"; </script>
 </body>
 </center>
 </html>
